Run a simple flask server.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,8 @@ services:
       - .:/spinpy
     environment:
       - PYTHONUNBUFFERED=1
-    # Uncomment if you need to expose ports
-    # ports:
-    #   - "8000:8000"
+    ports:
+      - "80:5000"
     develop:
       watch:
         - action: sync
